--- a/src/notebooks/SimplePytorchMobileNet.ipynb
+++ b/src/notebooks/SimplePytorchMobileNet.ipynb
@@ -32,12 +32,19 @@
     "import torchvision.datasets as datasets\n",
     "import torchvision.models as models\n",
     "\n",
+    "# Just some functions to average stuff, and save the model\n",
+    "from utils_pytorch import *\n",
+    "\n",
+    "# Trainning parameters\n",
     "learning_rate = 0.1\n",
-    "batch_size = 256\n",
+    "batch_size = 64\n",
     "momentum = 0.9\n",
     "weight_decay = 1e-4\n",
     "workers = 4\n",
-    "IMAGENET_PATH='/mnt/eulbh-nas01/qa_analitics/Apical_CNN_training_data/ImageNet/ILSVRC/Data/DET'"
+    "print_freq = 10\n",
+    "epochs = 90\n",
+    "#IMAGENET_PATH ='/mnt/eulbh-nas01/qa_analitics/Apical_CNN_training_data/ImageNet/ILSVRC/Data/DET'\n",
+    "IMAGENET_PATH = '/home/leoara01/work/IMAGENET/ILSVRC/Data/CLS-LOC'"
    ]
   },
   {
@@ -156,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -176,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -220,12 +227,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "model.train()\n",
-    "for i, (input, target) in enumerate(train_loader):        \n",
+    "def train(train_loader, model, criterion, optimizer, epoch):\n",
+    "    batch_time = AverageMeter()\n",
+    "    data_time = AverageMeter()\n",
+    "    losses = AverageMeter()\n",
+    "    top1 = AverageMeter()\n",
+    "    top5 = AverageMeter()\n",
+    "\n",
+    "    # switch to train mode\n",
+    "    model.train()\n",
+    "\n",
+    "    end = time.time()\n",
+    "    for i, (input, target) in enumerate(train_loader):\n",
+    "        # measure data loading time\n",
+    "        data_time.update(time.time() - end)\n",
     "\n",
     "        target = target.cuda(async=True)\n",
     "        input_var = torch.autograd.Variable(input)\n",
@@ -234,13 +253,23 @@
     "        # compute output\n",
     "        output = model(input_var)\n",
     "        loss = criterion(output, target_var)\n",
-    "        \n",
+    "\n",
+    "        # measure accuracy and record loss\n",
+    "        prec1, prec5 = accuracy(output.data, target, topk=(1, 5))\n",
+    "        losses.update(loss.data[0], input.size(0))\n",
+    "        top1.update(prec1[0], input.size(0))\n",
+    "        top5.update(prec5[0], input.size(0))\n",
+    "\n",
     "        # compute gradient and do SGD step\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
-    "        optimizer.step()        \n",
+    "        optimizer.step()\n",
     "\n",
-    "        if i % args.print_freq == 0:\n",
+    "        # measure elapsed time\n",
+    "        batch_time.update(time.time() - end)\n",
+    "        end = time.time()\n",
+    "\n",
+    "        if i % print_freq == 0:\n",
     "            print('Epoch: [{0}][{1}/{2}]\\t'\n",
     "                  'Time {batch_time.val:.3f} ({batch_time.avg:.3f})\\t'\n",
     "                  'Data {data_time.val:.3f} ({data_time.avg:.3f})\\t'\n",
@@ -250,6 +279,52 @@
     "                   epoch, i, len(train_loader), batch_time=batch_time,\n",
     "                   data_time=data_time, loss=losses, top1=top1, top5=top5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: [0][0/20019]\tTime 12.060 (12.060)\tData 5.786 (5.786)\tLoss 6.9023 (6.9023)\tPrec@1 0.000 (0.000)\tPrec@5 1.562 (1.562)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for epoch in range(0, epochs):\n",
+    "        adjust_learning_rate(optimizer, epoch, learning_rate)\n",
+    "\n",
+    "        # train for one epoch\n",
+    "        train(train_loader, model, criterion, optimizer, epoch)\n",
+    "\n",
+    "        # evaluate on validation set\n",
+    "        prec1 = validate(val_loader, model, criterion)\n",
+    "\n",
+    "        # remember best prec@1 and save checkpoint\n",
+    "        is_best = prec1 > best_prec1\n",
+    "        best_prec1 = max(prec1, best_prec1)\n",
+    "        save_checkpoint({\n",
+    "            'epoch': epoch + 1,\n",
+    "            'arch': args.arch,\n",
+    "            'state_dict': model.state_dict(),\n",
+    "            'best_prec1': best_prec1,\n",
+    "            'optimizer' : optimizer.state_dict(),\n",
+    "        }, is_best)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
