--- a/src/notebooks/SimplePytorchMobileNet.ipynb
+++ b/src/notebooks/SimplePytorchMobileNet.ipynb
@@ -9,14 +9,17 @@
     "### References\n",
     "* [Paper](https://arxiv.org/pdf/1704.04861.pdf)\n",
     "* [Other pytrch implementation](https://github.com/marvis/pytorch-mobilenet)\n",
-    "* [Training Imagenet with Pytorch](https://github.com/pytorch/examples/tree/master/imagenet)"
+    "* [Training Imagenet with Pytorch](https://github.com/pytorch/examples/tree/master/imagenet)\n",
+    "* [Python3 Profiling](https://docs.python.org/3/library/profile.html)\n",
+    "* [Profiling pytorch issue I](https://discuss.pytorch.org/t/strange-time-profiling-results-on-gpu/8016)\n",
+    "* [Profiling pytorch issue II](https://discuss.pytorch.org/t/profiling-pytorch-scripts/4950/5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -41,8 +44,8 @@
     "momentum = 0.9\n",
     "weight_decay = 1e-4\n",
     "workers = 4\n",
-    "print_freq = 10\n",
-    "epochs = 90\n",
+    "print_freq = 100\n",
+    "epochs = 2\n",
     "#IMAGENET_PATH ='/mnt/eulbh-nas01/qa_analitics/Apical_CNN_training_data/ImageNet/ILSVRC/Data/DET'\n",
     "IMAGENET_PATH = '/home/leoara01/work/IMAGENET/ILSVRC/Data/CLS-LOC'"
    ]
@@ -163,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -183,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -286,15 +289,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: [0][0/20019]\tTime 12.060 (12.060)\tData 5.786 (5.786)\tLoss 6.9023 (6.9023)\tPrec@1 0.000 (0.000)\tPrec@5 1.562 (1.562)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for epoch in range(0, epochs):\n",
     "        adjust_learning_rate(optimizer, epoch, learning_rate)\n",
@@ -316,15 +311,6 @@
     "            'optimizer' : optimizer.state_dict(),\n",
     "        }, is_best)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
