Adding comments to squeezenet

--- a/src/notebooks/SimplePytorchSqueezeNet.ipynb
+++ b/src/notebooks/SimplePytorchSqueezeNet.ipynb
@@ -11,7 +11,9 @@
     "* [Pytorch(reference) implementation](https://github.com/pytorch/vision/blob/master/torchvision/models/squeezenet.py)\n",
     "* [Training Imagenet with Pytorch](https://github.com/pytorch/examples/tree/master/imagenet)\n",
     "* [Python3 Profiling](https://docs.python.org/3/library/profile.html)\n",
-    "* [Issue with the pretrained models](https://github.com/DeepScale/SqueezeNet/issues/34)"
+    "* [Issue with the pretrained models](https://github.com/DeepScale/SqueezeNet/issues/34)\n",
+    "* [SqueezeNet Neural Style](https://github.com/lizeng614/SqueezeNet-Neural-Style-Pytorch)\n",
+    "* [Converters](https://github.com/ysh329/deep-learning-model-convertor)"
    ]
   },
   {
@@ -94,7 +96,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Architecture v1.1"
+    "### Architecture v1.1\n",
+    "![title](SqueezeNetArch.png)"
    ]
   },
   {
@@ -125,9 +128,12 @@
     "                Fire(512, 64, 256, 256),)\n",
     "        # Final convolution is initialized differently form the rest\n",
     "        final_conv = nn.Conv2d(512, self.num_classes, kernel_size=1)\n",
+    "        \n",
+    "        # Add dropout, Relu and Average pool\n",
     "        self.classifier = nn.Sequential(\n",
     "            nn.Dropout(p=0.5),final_conv,nn.ReLU(inplace=True),nn.AvgPool2d(13, stride=1))\n",
     "\n",
+    "        # Initialize layers\n",
     "        for m in self.modules():\n",
     "            if isinstance(m, nn.Conv2d):\n",
     "                if m is final_conv:\n",
@@ -252,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -309,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -318,24 +324,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: [0][0/10010]\tTime 10.462 (10.462)\tData 6.326 (6.326)\tLoss 6.9180 (6.9180)\tPrec@1 0.000 (0.000)\tPrec@5 0.000 (0.000)\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "cuda runtime error (2) : out of memory at /opt/conda/conda-bld/pytorch_1503970438496/work/torch/lib/THC/generic/THCStorage.cu:66",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-4d57176bb202>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;31m# train for one epoch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;31m# evaluate on validation set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-8-776fc05070f8>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(train_loader, model, criterion, optimizer, epoch)\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0;31m# compute gradient and do SGD step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/leoara01/anaconda3/lib/python3.6/site-packages/torch/autograd/variable.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, retain_variables)\u001b[0m\n\u001b[1;32m    154\u001b[0m                 \u001b[0mVariable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m         \"\"\"\n\u001b[0;32m--> 156\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_variables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    157\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    158\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/leoara01/anaconda3/lib/python3.6/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(variables, grad_variables, retain_graph, create_graph, retain_variables)\u001b[0m\n\u001b[1;32m     96\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[0;32m---> 98\u001b[0;31m         variables, grad_variables, retain_graph)\n\u001b[0m\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/leoara01/anaconda3/lib/python3.6/site-packages/torch/autograd/function.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 91\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_cls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/leoara01/anaconda3/lib/python3.6/site-packages/torch/nn/_functions/thnn/auto.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(ctx, grad_output)\u001b[0m\n\u001b[1;32m    185\u001b[0m         \u001b[0;31m# 3) it may be simpler to recalculate some of these parameters (e.g. ctx._backend) in backward_cls_forward?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 187\u001b[0;31m         return (backward_cls.apply(input, grad_output, ctx.additional_args, ctx._backend, ctx.buffers, *tensor_params) +\n\u001b[0m\u001b[1;32m    188\u001b[0m                 (None,) * len(ctx.additional_args))\n\u001b[1;32m    189\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/leoara01/anaconda3/lib/python3.6/site-packages/torch/nn/_functions/thnn/auto.py\u001b[0m in \u001b[0;36mbackward_cls_forward\u001b[0;34m(ctx, input, grad_output, additional_args_ctx, backend_ctx, buffers_ctx, *params)\u001b[0m\n\u001b[1;32m    213\u001b[0m                 \u001b[0mtmp_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m                 \u001b[0madditional_args\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp_args\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 215\u001b[0;31m             \u001b[0mgrad_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnew\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    216\u001b[0m             \u001b[0mparams_without_bias\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparams\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    217\u001b[0m             \u001b[0mupdate_grad_input_fn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_backend\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mupdate_grad_input\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: cuda runtime error (2) : out of memory at /opt/conda/conda-bld/pytorch_1503970438496/work/torch/lib/THC/generic/THCStorage.cu:66"
+      "Epoch: [0][0/20019]\tTime 6.216 (6.216)\tData 3.115 (3.115)\tLoss 7.1151 (7.1151)\tPrec@1 0.000 (0.000)\tPrec@5 0.000 (0.000)\n",
+      "Epoch: [0][100/20019]\tTime 0.682 (0.863)\tData 0.189 (0.322)\tLoss 6.9071 (6.9100)\tPrec@1 0.000 (0.139)\tPrec@5 1.562 (0.557)\n",
+      "Epoch: [0][200/20019]\tTime 0.683 (0.846)\tData 0.000 (0.345)\tLoss 6.9078 (6.9089)\tPrec@1 0.000 (0.124)\tPrec@5 0.000 (0.544)\n",
+      "Epoch: [0][300/20019]\tTime 0.681 (0.849)\tData 0.000 (0.349)\tLoss 6.9075 (6.9085)\tPrec@1 0.000 (0.104)\tPrec@5 0.000 (0.555)\n",
+      "Epoch: [0][400/20019]\tTime 1.094 (0.843)\tData 0.864 (0.336)\tLoss 6.9096 (6.9084)\tPrec@1 0.000 (0.097)\tPrec@5 0.000 (0.526)\n",
+      "Epoch: [0][500/20019]\tTime 0.683 (0.846)\tData 0.386 (0.354)\tLoss 6.9078 (6.9082)\tPrec@1 0.000 (0.094)\tPrec@5 0.000 (0.515)\n",
+      "Epoch: [0][600/20019]\tTime 0.679 (0.846)\tData 0.000 (0.360)\tLoss 6.9074 (6.9082)\tPrec@1 0.000 (0.099)\tPrec@5 0.000 (0.528)\n",
+      "Epoch: [0][700/20019]\tTime 0.687 (0.848)\tData 0.000 (0.363)\tLoss 6.9098 (6.9081)\tPrec@1 0.000 (0.091)\tPrec@5 0.000 (0.506)\n",
+      "Epoch: [0][800/20019]\tTime 0.687 (0.845)\tData 0.000 (0.352)\tLoss 6.9074 (6.9081)\tPrec@1 0.000 (0.096)\tPrec@5 0.000 (0.521)\n",
+      "Epoch: [0][900/20019]\tTime 0.752 (0.849)\tData 0.519 (0.355)\tLoss 6.9067 (6.9081)\tPrec@1 0.000 (0.095)\tPrec@5 0.000 (0.510)\n",
+      "Epoch: [0][1000/20019]\tTime 0.935 (0.852)\tData 0.706 (0.359)\tLoss 6.9062 (6.9081)\tPrec@1 0.000 (0.092)\tPrec@5 0.000 (0.495)\n",
+      "Epoch: [0][1100/20019]\tTime 0.988 (0.851)\tData 0.759 (0.358)\tLoss 6.9077 (6.9080)\tPrec@1 0.000 (0.102)\tPrec@5 0.000 (0.509)\n",
+      "Epoch: [0][1200/20019]\tTime 0.674 (0.854)\tData 0.000 (0.363)\tLoss 6.9084 (6.9080)\tPrec@1 0.000 (0.099)\tPrec@5 0.000 (0.503)\n",
+      "Epoch: [0][1300/20019]\tTime 1.042 (0.858)\tData 0.809 (0.369)\tLoss 6.9089 (6.9079)\tPrec@1 0.000 (0.106)\tPrec@5 0.000 (0.513)\n",
+      "Epoch: [0][1400/20019]\tTime 0.680 (0.860)\tData 0.000 (0.371)\tLoss 6.9085 (6.9079)\tPrec@1 0.000 (0.107)\tPrec@5 0.000 (0.506)\n",
+      "Epoch: [0][1500/20019]\tTime 0.683 (0.863)\tData 0.398 (0.375)\tLoss 6.9107 (6.9079)\tPrec@1 0.000 (0.107)\tPrec@5 0.000 (0.501)\n",
+      "Epoch: [0][1600/20019]\tTime 0.684 (0.867)\tData 0.062 (0.380)\tLoss 6.9071 (6.9079)\tPrec@1 0.000 (0.106)\tPrec@5 0.000 (0.497)\n",
+      "Epoch: [0][1700/20019]\tTime 0.683 (0.871)\tData 0.000 (0.385)\tLoss 6.9057 (6.9079)\tPrec@1 0.000 (0.106)\tPrec@5 1.562 (0.502)\n",
+      "Epoch: [0][1800/20019]\tTime 0.687 (0.873)\tData 0.000 (0.388)\tLoss 6.9120 (6.9079)\tPrec@1 0.000 (0.105)\tPrec@5 0.000 (0.516)\n",
+      "Epoch: [0][1900/20019]\tTime 0.692 (0.875)\tData 0.395 (0.394)\tLoss 6.9069 (6.9079)\tPrec@1 0.000 (0.106)\tPrec@5 0.000 (0.519)\n",
+      "Epoch: [0][2000/20019]\tTime 0.686 (0.878)\tData 0.326 (0.396)\tLoss 6.9037 (6.9078)\tPrec@1 0.000 (0.107)\tPrec@5 1.562 (0.516)\n",
+      "Epoch: [0][2100/20019]\tTime 0.688 (0.882)\tData 0.000 (0.400)\tLoss 6.9008 (6.9077)\tPrec@1 0.000 (0.106)\tPrec@5 0.000 (0.517)\n",
+      "Epoch: [0][2200/20019]\tTime 0.848 (0.885)\tData 0.615 (0.405)\tLoss 6.9085 (6.9077)\tPrec@1 0.000 (0.104)\tPrec@5 1.562 (0.513)\n",
+      "Epoch: [0][2300/20019]\tTime 2.269 (0.888)\tData 2.040 (0.410)\tLoss 6.9012 (6.9077)\tPrec@1 0.000 (0.105)\tPrec@5 0.000 (0.515)\n",
+      "Epoch: [0][2400/20019]\tTime 0.680 (0.890)\tData 0.000 (0.413)\tLoss 6.9107 (6.9077)\tPrec@1 0.000 (0.103)\tPrec@5 0.000 (0.513)\n",
+      "Epoch: [0][2500/20019]\tTime 0.925 (0.892)\tData 0.686 (0.416)\tLoss 6.9068 (6.9077)\tPrec@1 0.000 (0.101)\tPrec@5 1.562 (0.519)\n",
+      "Epoch: [0][2600/20019]\tTime 0.678 (0.895)\tData 0.000 (0.421)\tLoss 6.9035 (6.9077)\tPrec@1 0.000 (0.102)\tPrec@5 1.562 (0.519)\n",
+      "Epoch: [0][2700/20019]\tTime 0.681 (0.898)\tData 0.000 (0.426)\tLoss 6.9070 (6.9077)\tPrec@1 0.000 (0.102)\tPrec@5 0.000 (0.516)\n",
+      "Epoch: [0][2800/20019]\tTime 0.686 (0.900)\tData 0.079 (0.430)\tLoss 6.9073 (6.9077)\tPrec@1 0.000 (0.103)\tPrec@5 0.000 (0.513)\n",
+      "Epoch: [0][2900/20019]\tTime 0.681 (0.903)\tData 0.433 (0.434)\tLoss 6.9098 (6.9077)\tPrec@1 0.000 (0.103)\tPrec@5 0.000 (0.511)\n",
+      "Epoch: [0][3000/20019]\tTime 0.991 (0.906)\tData 0.758 (0.438)\tLoss 6.9090 (6.9078)\tPrec@1 0.000 (0.103)\tPrec@5 0.000 (0.509)\n",
+      "Epoch: [0][3100/20019]\tTime 1.216 (0.908)\tData 0.985 (0.442)\tLoss 6.9080 (6.9078)\tPrec@1 0.000 (0.102)\tPrec@5 0.000 (0.503)\n",
+      "Epoch: [0][3200/20019]\tTime 0.688 (0.912)\tData 0.000 (0.447)\tLoss 6.9087 (6.9078)\tPrec@1 0.000 (0.103)\tPrec@5 0.000 (0.509)\n",
+      "Epoch: [0][3300/20019]\tTime 0.717 (0.914)\tData 0.423 (0.450)\tLoss 6.9062 (6.9078)\tPrec@1 1.562 (0.104)\tPrec@5 1.562 (0.510)\n",
+      "Epoch: [0][3400/20019]\tTime 0.688 (0.916)\tData 0.000 (0.453)\tLoss 6.9077 (6.9078)\tPrec@1 0.000 (0.103)\tPrec@5 1.562 (0.511)\n",
+      "Epoch: [0][3500/20019]\tTime 0.682 (0.919)\tData 0.000 (0.454)\tLoss 6.9064 (6.9078)\tPrec@1 0.000 (0.102)\tPrec@5 3.125 (0.508)\n",
+      "Epoch: [0][3600/20019]\tTime 2.529 (0.921)\tData 2.289 (0.457)\tLoss 6.9083 (6.9078)\tPrec@1 0.000 (0.101)\tPrec@5 0.000 (0.506)\n",
+      "Epoch: [0][3700/20019]\tTime 0.679 (0.924)\tData 0.000 (0.460)\tLoss 6.9056 (6.9078)\tPrec@1 0.000 (0.100)\tPrec@5 0.000 (0.506)\n",
+      "Epoch: [0][3800/20019]\tTime 1.233 (0.926)\tData 1.003 (0.462)\tLoss 6.9092 (6.9078)\tPrec@1 0.000 (0.099)\tPrec@5 0.000 (0.504)\n",
+      "Epoch: [0][3900/20019]\tTime 0.691 (0.929)\tData 0.000 (0.465)\tLoss 6.9079 (6.9078)\tPrec@1 0.000 (0.100)\tPrec@5 0.000 (0.503)\n",
+      "Epoch: [0][4000/20019]\tTime 0.685 (0.931)\tData 0.000 (0.466)\tLoss 6.9080 (6.9078)\tPrec@1 0.000 (0.101)\tPrec@5 0.000 (0.508)\n",
+      "Epoch: [0][4100/20019]\tTime 1.043 (0.933)\tData 0.804 (0.469)\tLoss 6.9074 (6.9078)\tPrec@1 0.000 (0.101)\tPrec@5 0.000 (0.506)\n",
+      "Epoch: [0][4200/20019]\tTime 0.685 (0.935)\tData 0.000 (0.470)\tLoss 6.9090 (6.9078)\tPrec@1 0.000 (0.102)\tPrec@5 0.000 (0.506)\n",
+      "Epoch: [0][4300/20019]\tTime 1.484 (0.937)\tData 1.244 (0.473)\tLoss 6.9061 (6.9078)\tPrec@1 0.000 (0.102)\tPrec@5 0.000 (0.504)\n",
+      "Epoch: [0][4400/20019]\tTime 0.706 (0.940)\tData 0.000 (0.477)\tLoss 6.9064 (6.9078)\tPrec@1 1.562 (0.102)\tPrec@5 1.562 (0.503)\n",
+      "Epoch: [0][4500/20019]\tTime 0.690 (0.943)\tData 0.000 (0.480)\tLoss 6.9084 (6.9078)\tPrec@1 0.000 (0.103)\tPrec@5 0.000 (0.506)\n",
+      "Epoch: [0][4600/20019]\tTime 0.690 (0.946)\tData 0.012 (0.484)\tLoss 6.9075 (6.9078)\tPrec@1 0.000 (0.103)\tPrec@5 1.562 (0.506)\n",
+      "Epoch: [0][4700/20019]\tTime 0.899 (0.948)\tData 0.665 (0.487)\tLoss 6.9080 (6.9078)\tPrec@1 0.000 (0.103)\tPrec@5 0.000 (0.504)\n",
+      "Epoch: [0][4800/20019]\tTime 0.703 (0.950)\tData 0.000 (0.490)\tLoss 6.9083 (6.9078)\tPrec@1 0.000 (0.103)\tPrec@5 0.000 (0.503)\n",
+      "Epoch: [0][4900/20019]\tTime 1.871 (0.953)\tData 1.641 (0.495)\tLoss 6.9072 (6.9078)\tPrec@1 0.000 (0.102)\tPrec@5 1.562 (0.502)\n",
+      "Epoch: [0][5000/20019]\tTime 2.127 (0.957)\tData 1.891 (0.500)\tLoss 6.9076 (6.9078)\tPrec@1 0.000 (0.101)\tPrec@5 0.000 (0.500)\n",
+      "Epoch: [0][5100/20019]\tTime 0.682 (0.960)\tData 0.000 (0.504)\tLoss 6.9043 (6.9078)\tPrec@1 1.562 (0.101)\tPrec@5 3.125 (0.499)\n",
+      "Epoch: [0][5200/20019]\tTime 0.897 (0.964)\tData 0.666 (0.509)\tLoss 6.9089 (6.9078)\tPrec@1 0.000 (0.101)\tPrec@5 0.000 (0.499)\n",
+      "Epoch: [0][5300/20019]\tTime 0.681 (0.967)\tData 0.000 (0.513)\tLoss 6.9075 (6.9078)\tPrec@1 0.000 (0.101)\tPrec@5 1.562 (0.499)\n",
+      "Epoch: [0][5400/20019]\tTime 0.683 (0.969)\tData 0.308 (0.515)\tLoss 6.9088 (6.9078)\tPrec@1 0.000 (0.101)\tPrec@5 0.000 (0.498)\n",
+      "Epoch: [0][5500/20019]\tTime 0.687 (0.973)\tData 0.000 (0.518)\tLoss 6.9074 (6.9078)\tPrec@1 0.000 (0.101)\tPrec@5 0.000 (0.500)\n",
+      "Epoch: [0][5600/20019]\tTime 0.684 (0.977)\tData 0.218 (0.523)\tLoss 6.9085 (6.9078)\tPrec@1 0.000 (0.102)\tPrec@5 0.000 (0.500)\n",
+      "Epoch: [0][5700/20019]\tTime 0.683 (0.981)\tData 0.000 (0.526)\tLoss 6.9059 (6.9078)\tPrec@1 1.562 (0.103)\tPrec@5 1.562 (0.502)\n",
+      "Epoch: [0][5800/20019]\tTime 2.456 (0.984)\tData 2.226 (0.531)\tLoss 6.9074 (6.9078)\tPrec@1 0.000 (0.102)\tPrec@5 0.000 (0.503)\n",
+      "Epoch: [0][5900/20019]\tTime 0.681 (0.987)\tData 0.000 (0.534)\tLoss 6.9084 (6.9078)\tPrec@1 0.000 (0.101)\tPrec@5 0.000 (0.501)\n",
+      "Epoch: [0][6000/20019]\tTime 5.212 (0.991)\tData 4.983 (0.539)\tLoss 6.9084 (6.9078)\tPrec@1 0.000 (0.101)\tPrec@5 0.000 (0.500)\n",
+      "Epoch: [0][6100/20019]\tTime 0.685 (0.994)\tData 0.000 (0.542)\tLoss 6.9065 (6.9078)\tPrec@1 1.562 (0.101)\tPrec@5 1.562 (0.500)\n",
+      "Epoch: [0][6200/20019]\tTime 0.686 (0.997)\tData 0.000 (0.547)\tLoss 6.9077 (6.9078)\tPrec@1 0.000 (0.101)\tPrec@5 0.000 (0.500)\n"
      ]
     }
    ],
